# anki

./: .deny.toml  .gitignore  .mcp.json  .swiftformat  .swiftlint.yml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  TODO.md  rust-toolchain.toml
.agents/skills/atlas-integration/: SKILL.md
.agents/skills/desloppify/: SKILL.md
.agents/skills/fork-sync/: SKILL.md
.cargo/: config.toml
.claude/agents/: architect.md  designer.md  executor.md
.claude/commands/: audit.md  build.md  lint.md  proto-gen.md  sync-server.md  sync-status.md  sync-upstream.md  test.md
.claude/skills/build-verify/: SKILL.md
.claude/skills/convention-audit/: SKILL.md
.claude/skills/fork-sync/: SKILL.md
.claude/skills/proto-workflow/: SKILL.md
.claude/skills/rust-ffi/: SKILL.md
.claude/skills/swiftui-patterns/: SKILL.md
.githooks/: README.md  pre-commit
.github/workflows/: ci.yml
.omc/: project-memory.json
.omc/state/: agent-replay-1af5e7b2-c170-4b84-b671-482625cfbf21.jsonl  agent-replay-ce949e4f-f11f-4a6e-98cb-c86b7ba3b457.jsonl  hud-state.json  hud-stdin-cache.json  idle-notif-cooldown.json  last-tool-error.json  mission-state.json  subagent-tracking.json
AnkiApp/: AnkiApp.swift  README.md
AnkiApp/AnkiApp/AnkiApp/: AnkiApp.swift
AnkiApp/AnkiApp/AnkiApp.xcodeproj/: project.pbxproj
AnkiApp/AnkiApp/AnkiAppTests/: AnkiAppTestSupport.swift  AnkiAppTests.swift  BackendConnectionStoreTests.swift  LocalProfileManagerTests.swift  RemoteAnkiServiceTests.swift  RemoteBridgeTestSupport.swift  RemoteBridgeTests.swift
AnkiApp/AnkiApp/AnkiAppUITests/: AnkiAppUITests.swift  AnkiAppUITestsLaunchTests.swift
AnkiApp/Bridge/: AnkiBridge.swift  AnkiService.swift  AnkiServiceProtocol.swift  ServiceConstants.swift
AnkiApp/Models/: AppState.swift  CardPreviewModel.swift  DeckBrowserModel.swift  NoteEditorModel.swift  ReviewerModel.swift  SearchModel.swift  StatsModel.swift  SyncModel.swift
AnkiApp/Proto/anki/: ankidroid.pb.swift  ankihub.pb.swift  ankiweb.pb.swift  backend.pb.swift  card_rendering.pb.swift  cards.pb.swift  collection.pb.swift  config.pb.swift  deck_config.pb.swift  decks.pb.swift  frontend.pb.swift  generic.pb.swift  i18n.pb.swift  image_occlusion.pb.swift  import_export.pb.swift  links.pb.swift  media.pb.swift  notes.pb.swift  notetypes.pb.swift  scheduler.pb.swift  search.pb.swift  stats.pb.swift  sync.pb.swift  tags.pb.swift
AnkiApp/Resources/: reviewer.html
AnkiApp/Views/: ContentView.swift  DetailRouter.swift  SidebarView.swift
AnkiApp/Views/DeckBrowser/: DeckBrowserView.swift  DeckRowView.swift
AnkiApp/Views/NoteEditor/: FieldEditorView.swift  NoteEditorView.swift  NotetypePicker.swift  TagEditor.swift
AnkiApp/Views/Reviewer/: AnswerBar.swift  CardWebView.swift  ReviewProgress.swift  ReviewerView.swift
AnkiApp/Views/Search/: CardPreviewPane.swift  SearchResultRow.swift  SearchView.swift
AnkiApp/Views/Settings/: PreferencesView.swift
AnkiApp/Views/Statistics/: ReviewChart.swift  StatisticsView.swift
AnkiApp/Views/Sync/: SyncView.swift
atlas/analytics/: Cargo.toml
atlas/analytics/benches/: analytics_hot_paths.rs
atlas/analytics/src/: coverage.rs  duplicates.rs  error.rs  repository.rs  service.rs
atlas/anki-sync/: Cargo.toml
atlas/anki-sync/src/: anki_reader.rs  core.rs  lib.rs
atlas/anki-sync/tests/: test_core.rs
atlas/card/: Cargo.toml
atlas/card/src/: models.rs  slug.rs
atlas/card/tests/: test_models.rs
atlas/cardloop/: Cargo.toml
atlas/cardloop/src/: anki_reader.rs  lib.rs  models.rs  progression.rs  store.rs
atlas/common/src/: config.rs  lib.rs  types.rs
atlas/common/tests/: config_test.rs  error_test.rs
atlas/database/: Cargo.toml
atlas/database/migrations/: 004_pgvector_note_chunks.sql  005_knowledge_graph_topic_cooccurrence.sql  006_remote_session_persistence.sql
atlas/database/src/: lib.rs  migrations.rs  pgvector.rs  queries.rs  sqlite_vector.rs
atlas/database/tests/: database_tests.rs
atlas/generator/: Cargo.toml
atlas/generator/tests/: error_tests.rs  models_tests.rs
atlas/indexer/: Cargo.toml
atlas/indexer/src/: batch.rs  lib.rs  service.rs
atlas/jobs/: Cargo.toml
atlas/jobs/src/: tasks.rs
atlas/knowledge-graph/src/: models.rs
atlas/rag/: Cargo.toml
atlas/rag/src/: chunker.rs
atlas/search/: Cargo.toml
atlas/search/benches/: search_hot_paths.rs
atlas/surface-runtime/: Cargo.toml
atlas_bridge/: Cargo.toml
atlas_bridge/src/: lib.rs
bins/cli/: Cargo.toml
bins/mcp/: Cargo.toml
bins/mcp/src/: lib.rs  (+4 more)
bins/server/: Cargo.toml
bins/server/src/: main.rs  remote_sessions.rs
bridge/: Cargo.toml
bridge/src/: lib.rs
docs/: CLI_GUIDE.md  CONFIG.md  CRATE_LAYOUT.md  FEATURE_IDEAS.md  MULTI_PLATFORM.md  PROTO_COMPATIBILITY.md  SWIFT_TYPES.md  TESTING.md  USER_GUIDE.md  architecture.md  index.md  upstream-sync.md
docs/migration/: architecture.md  atlas-features-architecture.md  atlas-integration.md  build-migration.md  parity-audit.md  stripping-guide.md  swift-ffi.md  swiftui-architecture.md
ffi_common/: Cargo.toml
ffi_common/src/: lib.rs
ftl/src/: main.rs  sync.rs
proto/anki/: backend.proto  card_rendering.proto  cards.proto  collection.proto  config.proto  deck_config.proto  decks.proto  generic.proto  i18n.proto  image_occlusion.proto  import_export.proto  links.proto  media.proto  notes.proto  notetypes.proto  scheduler.proto  search.proto  stats.proto  sync.proto  tags.proto
qt/launcher/: Cargo.toml
qt/launcher/src/: main.rs
qt/launcher/src/platform/: mac.rs  mod.rs
qt/mac/: appnap.swift  record.swift  theme.swift
rslib/: Cargo.toml  build.rs  rust_interface.rs
rslib/benches/: benchmark.rs
rslib/i18n/: build.rs  extract.rs  gather.rs
rslib/linkchecker/: Cargo.toml
rslib/proto/: Cargo.toml  build.rs  rust.rs
rslib/src/: adding.rs  browser_table.rs  cloze.rs  dbcheck.rs  findreplace.rs  latex.rs  lib.rs  log.rs  markdown.rs  preferences.rs  progress.rs  template.rs  tests.rs  text.rs  timestamp.rs  typeanswer.rs
rslib/sync/: main.rs
scripts/: audit.sh  build_apple_bridges.sh  check-swift-types.sh  classify-upstream.sh
(+422 files in other folders)
