[workspace.package]
version = "0.0.0"
authors = ["Ankitects Pty Ltd and contributors <https://help.ankiweb.net>"]
edition = "2024"
license = "AGPL-3.0-or-later"
rust-version = "1.88"

[workspace]
members = [
  "atlas/analytics",
  "atlas/anki-sync",
  "atlas/card",
  "atlas/cardloop",
  "atlas/common",
  "atlas/database",
  "atlas/generator",
  "atlas/indexer",
  "atlas/ingest",
  "atlas/jobs",
  "atlas/knowledge-graph",
  "atlas/llm",
  "atlas/obsidian",
  "atlas/rag",
  "atlas/search",
  "atlas/surface-contracts",
  "atlas/surface-runtime",
  "atlas/taxonomy",
  "atlas/validation",
  "bins/cli",
  "bins/mcp",
  "atlas_bridge",
  "bridge",
  "ftl",
  "rslib",
  "rslib/i18n",
  "rslib/io",
  "rslib/process",
  "rslib/proto",
  "rslib/proto_gen",
  "rslib/sync",
]
resolver = "2"

[workspace.dependencies.percent-encoding-iri]
git = "https://github.com/ankitects/rust-url.git"
rev = "bb930b8d089f4d30d7d19c12e54e66191de47b88"

[workspace.dependencies.fsrs]
version = "5.2.0"
# git = "https://github.com/open-spaced-repetition/fsrs-rs.git"
# path = "../open-spaced-repetition/fsrs-rs"

[workspace.dependencies]
# local
anki = { path = "rslib" }
anki_i18n = { path = "rslib/i18n" }
anki_io = { path = "rslib/io" }
anki_process = { path = "rslib/process" }
anki_proto = { path = "rslib/proto" }
anki_proto_gen = { path = "rslib/proto_gen" }

# pinned
unicase = "=2.6.0" # any changes could invalidate sqlite indexes

# normal
ammonia = "4.1.2"
anyhow = "1.0.102"
async-compression = { version = "0.4.41", features = ["zstd", "tokio"] }
async-stream = "0.3.6"
async-trait = "0.1.89"
axum = { version = "0.8.8", features = ["multipart", "macros", "json"] }
axum-client-ip = "1.3.1"
axum-extra = { version = "0.12.5", features = ["typed-header"] }
bitflags = "2.11.0"
blake3 = "1.8.4"
bytes = "1.11.1"
camino = "1.2.2"
chrono = { version = "0.4.44", default-features = false, features = ["std", "clock", "serde"] }
clap = { version = "4.6.0", features = ["derive", "env"] }
coarsetime = "0.1.37"
convert_case = "0.11.0"
criterion = { version = "0.8.2", features = ["async_tokio", "html_reports"] }
csv = "1.4.0"
data-encoding = "2.10.0"
difflib = "0.4.0"
dirs = "6.0.0"
dunce = "1.0.5"
envy = "0.4.2"
flate2 = "1.1.9"
fluent = "0.17.0"
fluent-bundle = "0.16.0"
fluent-syntax = "0.12.0"
fnv = "1.0.7"
futures = "0.3.32"
globset = "0.4.18"
hex = "0.4.3"
htmlescape = "0.3.1"
hyper = "1"
id_tree = "1.8.0"
inflections = "1.1.1"
intl-memoizer = "0.5.3"
itertools = "0.14.0"
libc = "0.2"
locale_config = "0.3.0"
maplit = "1.0.2"
nom = "8.0.0"
num-format = "0.4.4"
num_cpus = "1.17.0"
num_enum = "0.7.6"
pbkdf2 = { version = "0.12", features = ["simple"] }
permutation = "0.4.1"
phf = { version = "0.13", features = ["macros"] }
pin-project = "1.1.11"
prettyplease = "0.2.37"
prost = "0.14"
prost-build = "0.14"
prost-reflect = "0.16.3"
prost-types = "0.14"
pulldown-cmark = "0.13.3"
rand = "0.9.1"
rayon = "1.11.0"
regex = "1.12.3"
reqwest = { version = "0.13", default-features = false, features = ["json", "query", "socks", "stream", "multipart", "rustls"] }
rusqlite = { version = "0.32.1", features = ["trace", "functions", "collation", "bundled"] }
rustls-pemfile = "2.2.0"
scopeguard = "1.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde-aux = "4.7.0"
serde_json = "1.0.149"
serde_repr = "0.1.20"
serde_tuple = "1.1.3"
sha1 = "0.11.0"
sha2 = { version = "0.11.0" }
snafu = { version = "0.9.0", features = ["rust_1_81"] }
strum = { version = "0.28", features = ["derive"] }
syn = { version = "2.0.117", features = ["parsing", "printing"] }
tar = "0.4.45"
tempfile = "3.27.0"
termcolor = "1.4.1"
tokio = { version = "1.51", features = ["fs", "rt-multi-thread", "macros", "signal"] }
tokio-util = { version = "0.7.18", features = ["io"] }
tower-http = { version = "0.6.8", features = ["trace", "cors", "request-id"] }
tracing = { version = "0.1.44", features = ["max_level_trace", "release_max_level_debug"] }
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.23", features = ["fmt", "env-filter", "json"] }
unic-langid = { version = "0.9.6", features = ["macros"] }
unic-ucd-category = "0.9.0"
unicode-normalization = "0.1.25"
walkdir = "2.5.0"
which = "8.0.2"
wiremock = "0.6.5"
xz2 = "0.1.7"
zip = { version = "8.5.1", default-features = false, features = ["deflate", "time"] }
zstd = { version = "0.13.3", features = ["zstdmt"] }

# Atlas dependencies
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "macros", "chrono", "uuid", "json"] }
pgvector = { version = "0.4", features = ["sqlx"] }
rmcp = { version = "1.3.0", features = ["transport-io"] }
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
url = "2"
dotenvy = "0.15"
base64 = "0.22"
fastembed = "5"
mockall = "0.14"
assert_matches = "1.5"
serde_yml = "0.0.12"
testcontainers = "0.27"
testcontainers-modules = { version = "0.15", features = ["postgres", "redis"] }
dashmap = "6"
tower = { version = "0.5", features = ["timeout"] }

# Apply mild optimizations to our dependencies in dev mode, which among other things
# improves sha2 performance by about 21x. Opt 1 chosen due to
# https://doc.rust-lang.org/cargo/reference/profiles.html#overrides-and-generics. This
# applies to the dependencies of unit tests as well.
[profile.dev.package."*"]
opt-level = 1
debug = 0

[profile.dev.package.anki_i18n]
opt-level = 1
debug = 0

[profile.dev.package.anki_proto]
opt-level = 1
debug = 0

# Debug info off by default, which speeds up incremental builds and produces a considerably
# smaller library.
[profile.dev.package.anki]
debug = 0

[profile.release-lto]
inherits = "release"
lto = true

[workspace.lints.rust]
unsafe_code = "warn"

[workspace.lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
needless_pass_by_value = "warn"
redundant_closure_for_method_calls = "warn"
manual_let_else = "warn"
cloned_instead_of_copied = "warn"
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
