[package]
name = "atlas_bridge"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false
rust-version.workspace = true

[lib]
crate-type = ["staticlib"]

[dependencies]
surface-runtime = { path = "../atlas/surface-runtime" }
surface-contracts = { path = "../atlas/surface-contracts" }
common = { path = "../atlas/common" }
jobs = { path = "../atlas/jobs" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
sqlx = { workspace = true }
