[package]
name = "atlas_bridge"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false
rust-version.workspace = true

[lib]
crate-type = ["staticlib"]

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
unwrap_used = "deny"
expect_used = "warn"
panic = "warn"
needless_pass_by_value = "warn"
redundant_closure_for_method_calls = "warn"
manual_let_else = "warn"
cloned_instead_of_copied = "warn"
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[dependencies]
ffi_common.workspace = true
surface-runtime = { path = "../atlas/surface-runtime" }
surface-contracts = { path = "../atlas/surface-contracts" }
common = { path = "../atlas/common" }
jobs = { path = "../atlas/jobs" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
sqlx = { workspace = true }
