[package]
name = "anki_bridge"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false
rust-version.workspace = true

[lib]
crate-type = ["staticlib"]

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
unwrap_used = "deny"
expect_used = "warn"
panic = "warn"
needless_pass_by_value = "warn"
redundant_closure_for_method_calls = "warn"
manual_let_else = "warn"
cloned_instead_of_copied = "warn"
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[dependencies]
anki.workspace = true
