[package]
name = "anki-atlas-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "anki-atlas-server"
path = "src/main.rs"

[dependencies]
common = { path = "../../atlas/common" }
database = { path = "../../atlas/database" }
surface-contracts = { path = "../../atlas/surface-contracts" }
surface-runtime = { path = "../../atlas/surface-runtime" }
anki = { workspace = true }
anki_proto = { workspace = true }

axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tower-http = { workspace = true }
anyhow = { workspace = true }
dotenvy = { workspace = true }
chrono = { workspace = true, features = ["clock", "serde"] }
prost = { workspace = true }
tower = { workspace = true, features = ["util"] }
uuid = { workspace = true }
sqlx = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
if-addrs = { workspace = true }
mdns-sd = { workspace = true }

[dev-dependencies]
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true }
